Fix scrolling issue by fixing overflow of article elem

--- a/css/app.css
+++ b/css/app.css
@@ -206,7 +206,8 @@ article {
   flex-flow: column nowrap;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   position: absolute;
   top: 0;
   left: 0;
